<resources>
    <string name="app_name">Yamba</string>
    <string name="title_status_label">Actualización de Estado</string>
    <string name="status_edit_text_hint">¿Qué está pasando?</string>
    <string name="status_button_text">Tweet</string>
    <string name="status_sent_snackbar_text">Tweet enviado</string>
    <string name="status_sending_token_failure_snackbar_text">Error: tokens incorrectos</string>
    <string name="status_sending_network_failure_snackbar_text">Error: falló la conexión</string>
    <string name="status_sending_unknown_failure_snackbar_text">Error desconocido</string>
    <string name="summary_access_token">Por favor, introduce tu Access Token</string>
    <string name="title_access_token">Access Token</string>
    <string name="summary_access_token_secret">Por favor, introduce tu Access Token Secret</string>
    <string name="title_access_token_secret">Access Token Secret</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Borrar</string>
    <string name="status">Tweet</string>
    <string name="action_settings">Ajustes</string>
    <string name="startServiceTitle">Iniciar</string>
    <string name="stopServiceTitle">Parar</string>
    <string name="successful_database_restart_toast_text">Tweets eliminados de base de datos</string>
</resources>
