<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_status"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always|withText"
        android:title="@string/status" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete" />

    <item
        android:id="@+id/startServiceItem"
        android:title="@string/startServiceTitle"
        android:icon="@android:drawable/ic_media_play" />

    <item
        android:id="@+id/stopServiceItem"
        android:title="@string/stopServiceTitle"
        android:icon="@android:drawable/ic_media_pause" />

</menu>